[package]
name = "bitcharge"
version = "0.1.0"
authors = ["Mart Roosmaa <mart@roosmaa.net>"]

[dependencies]
log = "0.4"
pretty_env_logger = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"
tokio = "0.1"
tokio-timer = "0.2"
futures = "0.1"
hyper = "0.12"
hyper-tls = "0.3"
native-tls = "0.2"
bigdecimal = "0.0"
hmac = "0.6"
sha2 = "0.7"
gotham = "0.3"
gotham_derive = "0.3"
mime = "0.3"
askama = "0.7"
harsh = "0.1"
qrcode = { version = "0.7", default-features = false, features = ["svg"] }
base64 = "0.9"
url = "1.7"

[build-dependencies]
askama = "0.7"
